# wazo-stt-server

./: .gitignore  AGENTS.md  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
scripts/: download-model.sh
src/: db.rs  main.rs
